<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="bible.kjv.com.MainActivity" >
    <item
       android:id="@+id/item_filter_date"
       	android:orderInCategory="1"
       	android:title="@string/filter_date"
       	android:icon="@drawable/ic_filter_list_black_24dp"
       	app:showAsAction="ifRoom"        
       >
       <menu >  
	    <group android:id="@+id/log_filter" android:checkableBehavior="single">
	        <item
		        	android:id="@+id/menu_all"
		        	android:orderInCategory="110"
		        	android:title="@string/menu_all"
		        	app:showAsAction="ifRoom"        
	       			android:checked="true"
	       			android:titleCondensed="@string/menu_all"/>
	        <item
		        	android:id="@+id/menu_30_days"
		        	android:orderInCategory="110"
		        	android:title="@string/menu_30_days"
		        	app:showAsAction="ifRoom"        
	       			android:checked="false"
	       			android:titleCondensed="@string/menu_30_days"/>
	        <item
		        	android:id="@+id/menu_60_days"
		        	android:orderInCategory="110"
		        	android:title="@string/menu_60_days"
		        	app:showAsAction="ifRoom"        
	       			android:checked="false"
	       			android:titleCondensed="@string/menu_60_days"/>
	        <item
		        	android:id="@+id/menu_90_days"
		        	android:orderInCategory="110"
		        	android:title="@string/menu_90_days"
		        	app:showAsAction="ifRoom"        
	       			android:checked="false"
	       			android:titleCondensed="@string/menu_90_days"/>
	        <item
		        	android:id="@+id/menu_6_months"
		        	android:orderInCategory="110"
		        	android:title="@string/menu_6_months"
		        	app:showAsAction="ifRoom"        
	       			android:checked="false"
	       			android:titleCondensed="@string/menu_6_months"/>
	        <item
		        	android:id="@+id/menu_1_year"
		        	android:orderInCategory="110"
		        	android:title="@string/menu_1_year"
		        	app:showAsAction="ifRoom"        
	       			android:checked="false"
	       			android:titleCondensed="@string/menu_1_year"/>
	    </group>
	   </menu>
    </item>
</menu>
